--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,6 +76,7 @@ javafx.rebase.libs=false
 annotation.processing.run.all.processors=true
 excludes=
 application.title=Calling
+# This project does not use Preloader
 javafx.preloader.enabled=false
 javac.processorpath=${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
@@ -85,7 +86,7 @@ javadoc.use=true
 javadoc.nonavbar=false
 javadoc.windowtitle=
 javafx.deploy.addstartmenushortcut=false
-javafx.main.class=ua.in.Main
+javafx.main.class=ua.obolon.ponovoy.main.Main
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
