--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,7 +10,10 @@ javafx.classpath.extension=${java.home}/lib/javaws.jar\:${java.home}/lib/deploy.
 compile.on.save=true
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
-run.classpath=${dist.jar}\:${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${dist.jar}:\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 native.bundling.enabled=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.installpermanently=false
@@ -25,7 +28,7 @@ junit.selected.version=4
 jar.archive.disabled=true
 javafx.disable.concurrent.runs=false
 includes=**
-application.vendor=Alexander
+application.vendor=
 mkdist.disabled=false
 jar.compress=false
 annotation.processing.processors.list=
@@ -39,12 +42,14 @@ javac.source=1.8
 javafx.deploy.includeDT=true
 manifest.custom.permissions=
 javac.test.processorpath=${javac.test.classpath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 javafx.preloader.type=none
 build.generated.sources.dir=${build.dir}/generated-sources
 javafx.preloader.jar.path=
 javadoc.notree=false
-dist.jar=${dist.dir}/Calling.jar
+dist.jar=${dist.dir}/MCC.jar
 javafx.deploy.disable.proxy=false
 javafx.preloader.jar.filename=
 platform.active=default_platform
@@ -54,7 +59,8 @@ main.class=com.javafx.main.Main
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-javac.classpath=${javafx.classpath.extension}
+javac.classpath=\
+    ${javafx.classpath.extension}
 compile.on.save.unsupported.javafx=true
 javadoc.noindex=false
 javafx.deploy.backgroundupdate=false
@@ -75,10 +81,11 @@ meta.inf.dir=${src.dir}/META-INF
 javafx.rebase.libs=false
 annotation.processing.run.all.processors=true
 excludes=
-application.title=Calling
+application.title=MCC
 # This project does not use Preloader
 javafx.preloader.enabled=false
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 javafx.run.height=600
 endorsed.classpath=
@@ -86,7 +93,7 @@ javadoc.use=true
 javadoc.nonavbar=false
 javadoc.windowtitle=
 javafx.deploy.addstartmenushortcut=false
-javafx.main.class=ua.obolon.ponovoy.main.Main
+javafx.main.class=ua.magento.caller.main.Main
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
